--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: ElytraHorsepower
 main: dev.yourname.elytrahp.ElytraHorsepower
-version: 1.3.1
+version: 1.4.0
 api-version: '1.21'
 authors: ["grapelemon"]
 commands:
@@ -8,6 +8,12 @@ commands:
     description: Give an Elytra engine item with specified horsepower.
     usage: /giveengine <hp>
     permission: elytrahp.giveengine
+  elytrahp:
+    description: Admin commands (reload)
+    usage: /elytrahp reload
+    permission: elytrahp.admin
 permissions:
   elytrahp.giveengine:
+    default: op
+  elytrahp.admin:
     default: op
